subscribe to or unsubscribe from a particular work

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -146,3 +146,7 @@ Database.corporators = corporators
 Database.workNotes = workNotes
 Database.authorizedEmails = authorizedEmails
 Database.superusers = superusers
+Database.subscribers = subscribers
+
+#Alerts
+Subscribers.FieldID1 = Work ID
