Changed/added config.properties alerts section and updated Alerts.java

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -149,4 +149,6 @@ Database.superusers = superusers
 Database.subscribers = subscribers
 
 #Alerts
-Subscribers.FieldID1 = Work ID
+Subscribers.Field1 = Work ID
+Subscribers.Field2 = Ward Number
+Subscribers.Field3 = Source Of Income ID
