changed the website name to 'hdworks.org' in config.properties. added required css files in some jsp files

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,7 +5,7 @@
 #--------------------------------------------------------------------#
 #--------------------------------------------------------------------#
 
-WebsiteName = hack4hd.org
+WebsiteName = hdworks.org
 
 #Instructions to create Google OAuth client ID are here -- https://developers.google.com/identity/sign-in/web/devconsole-project
 OAuthClientIDforLocalHost = 825738061208-8a4hlv9as929mdpl3k6pig6ldvl8bpsd.apps.googleusercontent.com
