Added feature to get user location and get his/her ward and show works in his/her ward. Changed the name to mycity and logo temporarily

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -32,13 +32,19 @@ PathToKMLFilesRootFolder = http://hack4hd.org:8080/smartcityData/works/
 Header.Title = Hubballi Dharwad Smart Cities Project
 
 #This title will be displayed on the tabs of the browser
-Allpages.PageTitle = Smart City Forum
+Allpages.PageTitle = mycity
 
 #-------------------------#
 #Names of logo files you want to display in the header. These files should be put in 'images' folder
 LogoNameOrganization = hdmc-logo.png
 LogoNameSmartCity = smartcitylogo.jpg
 FaviconName = hdmc-logo.ico
+
+#-------------------------#
+#All the required file paths
+WardBoundariesJSONWeb =
+WardBoundariesJSONLocal = /data/projects/SmartCityForum/data/GIS/HD-ward-boundaries.json
+
 
 #-------------------------#
 #Customize footer text
